# paddleocr-api

./: .dockerignore  .env.example  API使用指南.md  CHANGELOG.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  README.md  UPGRADE_PLAN.md  celeryconfig.py  deploy-linux.sh  deploy-server.sh  docker-compose.yml  docker-fix-script-pro.sh  pyproject.toml  requirements.txt  run_celery.sh  start.bat  start.sh  start_celery_worker.bat  start_services.sh  start_wsl.sh  system-purge-safe-script.sh  创建发布指南.md  升级计划.md  常见问题.md  快速开始.md  数据库设计.md  版本管理.md  生产环境部署.md  部署指南.md  部署故障排查.md  配置说明.md
.github/workflows/: auto-release.yml  docker-publish.yml  python-publish.yml
app/: __init__.py  batch_scan_service.py  config.py  main.py  ocr_service.py  schemas.py
app/api/: genealogy.py
app/database/: __init__.py  models.py  repositories.py  session.py
app/services/: __init__.py  duplicate_detector.py  genealogy_parser.py
app/workers/: celery_worker.py
deploy/production/: .env.example  README.md  docker-compose.yml
deploy/production/examples/java/: .dockerignore  Dockerfile
deploy/production/examples/vue/: .dockerignore  Dockerfile  nginx.conf
deploy/production/mysql/init/: 001_init_database.sql
deploy/production/nginx/: nginx.conf
deploy/production/nginx/conf.d/: api.conf  app.conf  frontend.conf  portainer.conf
deploy/production/scripts/: quick-start.sh  update.sh
migrations/: 001_initial_schema.sql  002_add_json_data_column.sql
static/: batch.html  docs.html  index.html
